--- a/src/app/shop/checkout/checkout.component.html
+++ b/src/app/shop/checkout/checkout.component.html
@@ -50,9 +50,9 @@
                                         Phone No is must be number.
                                     </div>
                                     <div *ngIf="checkoutForm.controls.phone.touched && checkoutForm.controls.phone.errors?.pattern || (checkoutForm.controls.phone.errors?.maxlength || checkoutForm.controls.phone.errors?.minlength)"
-                                    class="text text-danger">
-                                    Phone No is must have 10 digits.
-                                </div>
+                                        class="text text-danger">
+                                        Phone No is must have 10 digits.
+                                    </div>
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                     <div class="field-label">Email Address</div>
@@ -66,6 +66,10 @@
                                         class="text text-danger">
                                         Invalid Email
                                     </div>
+                                    <div *ngIf="checkoutForm.controls.email.touched && checkoutForm.controls.email.errors?.pattern"
+                                        class="text text-danger">
+                                        Email format is invalid
+                                    </div>
                                 </div>
                                 <div class="form-group col-md-12 col-sm-12 col-xs-12">
                                     <div class="field-label">Country</div>
@@ -78,6 +82,10 @@
                                     <div *ngIf="checkoutForm.controls.country.touched && checkoutForm.controls.country.errors?.required"
                                         class="text text-danger">
                                         Country is required
+                                    </div>
+                                    <div *ngIf="checkoutForm.controls.country.touched && checkoutForm.controls.country.errors?.pattern"
+                                        class="text text-danger">
+                                        Country is must be string.
                                     </div>
                                 </div>
                                 <div class="form-group col-md-12 col-sm-12 col-xs-12">
@@ -101,6 +109,10 @@
                                         class="text text-danger">
                                         City is required
                                     </div>
+                                    <div *ngIf="checkoutForm.controls.town.touched && checkoutForm.controls.town.errors?.pattern"
+                                        class="text text-danger">
+                                        Town/City is must be string.
+                                    </div>
                                 </div>
                                 <div class="form-group col-md-12 col-sm-6 col-xs-12">
                                     <div class="field-label">State</div>
@@ -109,6 +121,10 @@
                                     <div *ngIf="checkoutForm.controls.state.touched && checkoutForm.controls.state.errors?.required"
                                         class="text text-danger">
                                         State is required
+                                    </div>
+                                    <div *ngIf="checkoutForm.controls.town.touched && checkoutForm.controls.state.errors?.pattern"
+                                        class="text text-danger">
+                                        State is must be string.
                                     </div>
                                 </div>
                                 <div class="form-group col-md-12 col-sm-6 col-xs-12">
@@ -120,7 +136,7 @@
                                         class="text text-danger">
                                         Postalcode is required
                                     </div>
-                                    <div *ngIf="checkoutForm.controls.postalcode.touched && (checkoutForm.controls.postalcode.errors?.maxlength || checkoutForm.controls.postalcode.errors?.minlength)"
+                                    <div *ngIf="checkoutForm.controls.postalcode.touched && (checkoutForm.controls.postalcode.errors?.maxlength || checkoutForm.controls.postalcode.errors?.minlength || checkoutForm.controls.postalcode.errors?.pattern)"
                                         class="text text-danger">
                                         Postal code must be 6 digits long
                                     </div>
@@ -190,18 +206,21 @@
                                                 <!-- Cash On Delivery (COD) Option -->
                                                 <li>
                                                     <div class="radio-option">
-                                                        <input type="radio" [(ngModel)]="payment" [value]="'COD'" name="payment-group" id="payment-2">
+                                                        <input type="radio" [(ngModel)]="payment" value="COD"
+                                                            name="payment-group" id="payment-2">
                                                         <label for="payment-2">Cash On Delivery
-                                                            <span class="small-text">Please send a check to Store Name, Store Street, Store Town, Store
+                                                            <span class="small-text">Please send a check to Store Name,
+                                                                Store Street, Store Town, Store
                                                                 State / County, Store Postcode.</span>
                                                         </label>
                                                     </div>
                                                 </li>
-                                                
+
                                                 <!-- Razorpay Option -->
                                                 <li>
                                                     <div class="radio-option">
-                                                        <input type="radio" [(ngModel)]="payment" [value]="'RAZORPAY'" name="payment-group" id="payment-3">
+                                                        <input type="radio" [(ngModel)]="payment" value="RAZORPAY"
+                                                            name="payment-group" id="payment-3">
                                                         <label for="payment-3">Razorpay
                                                             <span class="small-text">Pay securely with Razorpay.</span>
                                                         </label>
@@ -210,15 +229,17 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    
+
                                     <div class="text-end">
                                         <!-- <button type="submit" class="btn-solid btn" -->
                                         <button type="submit" class="btn-solid btn" [disabled]="!checkoutForm.valid"
-                                            (click)="placeOrder('COD')" *ngIf="payment == 'COD'' &&  'payment != 'RAZORPAY'">
+                                            (click)="placeOrder('COD')"
+                                            *ngIf="payment == 'COD'' &&  'payment != 'RAZORPAY'">
                                             Place Order
                                         </button>
                                         <button type="submit" class="btn-solid btn" [disabled]="!checkoutForm.valid"
-                                            (click)="placeOrder('RAZORPAY')" *ngIf="payment != 'COD'' &&  'payment == 'RAZORPAY'">
+                                            (click)="placeOrder('RAZORPAY')"
+                                            *ngIf="payment != 'COD'' &&  'payment == 'RAZORPAY'">
                                             Place Order
                                         </button>
                                         <!-- <ngx-paypal [config]="payPalConfig" *ngIf="payment == 'Paypal'"></ngx-paypal> -->
